fix: fix the gap css

--- a/week6/css/relative-style.css
+++ b/week6/css/relative-style.css
@@ -47,7 +47,6 @@
       gap: 10px;
       max-width: 1200px;
       /* 不要太宽 */
-      row-gap: 80px;
   }
 
   .card {
@@ -59,6 +58,7 @@
       align-items: center;
       height: 250px;
       /* set for box */
+      margin-bottom: 70px
   }
 
   /* 调照片大小 */
